@@ -6,6 +6,9 @@
 * Fully qualify ambiguous calls to read and p
 * Remove deprecated http::stream wrapper
 * Example HTTP server now calculates the MIME-type
+* Fixes and documentation for teardown and use with SSL:
+* Add example code to rfc7230 javadocs
+* Remove extraneous header file <beast/http/status.hpp>
 
 --------------------------------------------------------------------------------
 
